syntax = "proto3";

package v1;

import "google/protobuf/wrappers.proto";
import "service.proto";
import "circuitbreaker.proto";

message ConfigRelease {
  Service service = 1;
  google.protobuf.StringValue ctime = 2;
  google.protobuf.StringValue mtime = 3;

  CircuitBreaker circuitBreaker = 4;
}

message ConfigWithService {
  repeated Service services = 1;
  CircuitBreaker circuitBreaker = 2;
}